# mcp-server-foundry

./: README.md  pyproject.toml
src/mcp_server_foundry/: __init__.py  server.py
